- Forgot to add the fix of empty bodies to the settings pane