@@ -1,5 +1,5 @@
 {
-  "version" : "1.5.6",
+  "version" : "1.5.7",
   "author" : "Degranon",
   "requires" : [],
   "description" : "Star Custom Chat",
