@@ -46,7 +46,6 @@
     "frame": "/interface/scripted/starcustomchat/base/icons/frame.png"
   },
 
-  // The names of these should be located at <language>.json. This is an array to keep the priority
   "serverTextSpecific": [
     
   ],
